hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__let_expr_type_is_void.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected some type, got no type",
                span: 1:9; [8, 44],
                level: Error,
            },
        ],
        inputs: (),
    },
)
