hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__let_from_void.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected some type, got void",
                span: 1:30; [29, 32],
                level: Error,
            },
        ],
        inputs: (),
    },
)
